# diffenator2

./: .gitignore  AUTHORS.txt  CONTRIBUTORS.txt  README.md  html2.py  matcher.py  ninja_sketch.py  pyproject.toml  setup.py  wordlister.py
.github/workflows/: publish-release.yml  test.yml
diffenator/: __init__.py  __main__.py  diff.py  diffbrowsers.py  diffenator.py  diffenator2.py  diffenatorscript.py  font.py  ft_hb_shape.py  html.py  jfont.py  scale.py  screenshot.py  shape.py  utils.py
diffenator/data/wordlists/: Bengali.txt  Bopomofo.txt  Georgian.txt  Han.txt  Katakana.txt  Latin.txt  Thai.txt
diffenator/templates/: CSSFontStyle.partial.html  Glyph.partial.html  GlyphDiff.partial.html  WordDiff.partial.html  _base.html  diffbrowsers_glyphs.html  diffbrowsers_text.html  report.html
scripts/: ngram_slim.py  tokenise.py  wordlister.py
src/: .ninja_log
src/diffenator/: __init__.py  __main__.py  _diffbrowsers.py  diff.py  diffbrowsers.py  diffenator2.py  diffenatorscript.py  ft_hb_shape.py  html.py  jfont.py  make_latin.py  renderer.py  screenshot.py  shape.py  template_elements.py  utils.py  wordlistbuilder.py
src/diffenator/templates/: WordDiff.partial.html  diffbrowsers_text.html  diffbrowsers_waterfall.html  diffenator.html
src/diffenator2/: __init__.py  __main__.py  _diffbrowsers.py  _diffenator.py  font.py  html.py  jfont.py  masters.py  matcher.py  renderer.py  screenshot.py  segmenting.py  shape.py  template_elements.py  utils.py  wordlistbuilder.py
src/diffenator2/templates/: CSSFontFace.partial.html  CSSFontStyle.partial.html  GlyphDiff.partial.html  Word.partial.html  WordDiff.partial.html  _base.html  diffenator.html  (+5 more)
tests/: __init__.py  test_font.py  test_ft_hb_shape.py  test_functional.py  test_html.py  test_matcher.py  test_ninja.py  test_utils.py
(+52 files in other folders)
